force-app/main/default/objects/Conge__c/Conge__c.object-meta.xml
<CustomObject>
    <label>Congé</label>
    <nameField>
        <displayFormat>ABS - {0000}</displayFormat>
        <label>Numéro du congé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Congés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>