force-app/main/default/objects/Conge__c/fields/Conge_de_l_individu__c.field-meta.xml
<CustomField>
    <fullName>Conge_de_l_individu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congé de l&apos;individu</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Congés</relationshipLabel>
    <relationshipName>Cong_s</relationshipName>
    <type>Lookup</type>
</CustomField>