force-app/main/default/objects/Conge__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Congés</relationshipLabel>
    <relationshipName>Conges</relationshipName>
    <type>Lookup</type>
</CustomField>