force-app/main/default/objects/Conge__c/fields/isCongeEnCours__c.field-meta.xml
<CustomField>
    <fullName>isCongeEnCours__c</fullName>
    <formula>AND(
  (Date_de_debut__c &lt;= TODAY()),
  ( Date_de_fin__c &gt;=  TODAY())
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCongeEnCours</label>
    <type>Checkbox</type>
</CustomField>