force-app/main/default/objects/Conge__c/fields/isCongePrincipalFoyer__c.field-meta.xml
<CustomField>
    <fullName>isCongePrincipalFoyer__c</fullName>
    <formula>Foyer__r.TECH_CongePrincipal__r.Id  =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCongePrincipalFoyer</label>
    <type>Checkbox</type>
</CustomField>