force-app/main/default/objects/Conge__c/fields/isCongePrincipalIndividu__c.field-meta.xml
<CustomField>
    <fullName>isCongePrincipalIndividu__c</fullName>
    <formula>Conge_de_l_individu__r.TECH_CongePrincipal__r.Id = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCongePrincipalIndividu</label>
    <type>Checkbox</type>
</CustomField>