force-app/main/default/objects/Conge__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Autre</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>Médical</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>Professionnel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>