force-app/main/default/objects/Conge__c/fields/Rappel_au_retour__c.field-meta.xml
<CustomField>
    <fullName>Rappel_au_retour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rappel au retour</label>
    <type>Checkbox</type>
</CustomField>