force-app/main/default/objects/Conge__c/fields/Tech_EnCours__c.field-meta.xml
<CustomField>
    <fullName>Tech_EnCours__c</fullName>
    <label>Tech_EnCours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>