force-app/main/default/objects/Conge__c/fields/Type_de_conge__c.field-meta.xml
<CustomField>
    <fullName>Type_de_conge__c</fullName>
    <label>Type de congé</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>En vacances</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Absent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>