force-app/main/default/objects/Conge__c/fields/Vacances_hors_France__c.field-meta.xml
<CustomField>
    <fullName>Vacances_hors_France__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vacances hors France</label>
    <type>Checkbox</type>
</CustomField>