force-app/main/default/objects/Conge__c/validationRules/RV02_date_passe_non_possible_OLD_ancien.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_date_passe_non_possible_OLD_ancien</fullName>
    <active>false</active>
    <description>Bloquer la saisie des date dans le passé.</description>
    <errorConditionFormula>AND(

    !$User.Bypass_validation_rules__c,
    OR
      (
        AND(
             Date_de_debut__c &lt;  TODAY(),
             Or(
                ISNEW(),
                ISCHANGED( Date_de_debut__c ) 
                )
            ),
        AND(
             Date_de_fin__c &lt; TODAY (),
             OR(
                ISNEW(),
                ISCHANGED( Date_de_fin__c )
               )
           )
      )
    
)</errorConditionFormula>
    <errorMessage>Il n&apos;est pas possible de saisir des date de début ou de fin dans le passé.</errorMessage>
</ValidationRule>