force-app/main/default/objects/Conge__c/listViews/Conges_a_venir.listView-meta.xml
<ListView>
    <fullName>Conges_a_venir</fullName>
    <columns>NAME</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Foyer__c</columns>
    <columns>Conge_de_l_individu__c</columns>
    <columns>Type_de_conge__c</columns>
    <columns>Rappel_au_retour__c</columns>
    <columns>Vacances_hors_France__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_debut__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Congés à venir</label>
</ListView>