force-app/main/default/objects/Conge__c/listViews/Conges_en_cours.listView-meta.xml
<ListView>
    <fullName>Conges_en_cours</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Foyer__c</columns>
    <columns>Conge_de_l_individu__c</columns>
    <columns>Type_de_conge__c</columns>
    <columns>Rappel_au_retour__c</columns>
    <columns>Vacances_hors_France__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_debut__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Conge_de_l_individu__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Date_de_fin__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Type_de_conge__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Congés en cours</label>
</ListView>