force-app/main/default/objects/Conge__c/listViews/Conges_finis.listView-meta.xml
<ListView>
    <fullName>Conges_finis</fullName>
    <columns>NAME</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Foyer__c</columns>
    <columns>Conge_de_l_individu__c</columns>
    <columns>Type_de_conge__c</columns>
    <columns>Rappel_au_retour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_fin__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Date_de_fin__c</field>
        <operation>greaterThan</operation>
        <value>7/20/2021</value>
    </filters>
    <label>Congés finis</label>
</ListView>