force-app/main/default/objects/Conge__c/listViews/Tous_les_conges.listView-meta.xml
<ListView>
    <fullName>Tous_les_conges</fullName>
    <columns>NAME</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Foyer__c</columns>
    <columns>Conge_de_l_individu__c</columns>
    <columns>Type_de_conge__c</columns>
    <columns>Rappel_au_retour__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les congés</label>
</ListView>